Fix nav and alignment.

--- a/static/css/guess.css
+++ b/static/css/guess.css
@@ -26,7 +26,7 @@
 }
 
 #pano-wrapper {
-  height:50vh;
+  height:45vh;
   overflow:hidden;
 }
 
