--- a/static/css/label.css
+++ b/static/css/label.css
@@ -24,7 +24,6 @@
 } */
 
 #grid {
-  height: 50vh;
 }
 
 .form-group {
